[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Sunny Kalsi <thesunnyk@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
openssl = "0.6.4"

[[bin]]
name = "challenge1"

[[bin]]
name = "challenge2"

[[bin]]
name = "challenge3"

[[bin]]
name = "challenge4"

[[bin]]
name = "challenge5"

[[bin]]
name = "challenge6"

[[bin]]
name = "challenge7"

[[bin]]
name = "challenge8"
